Added 5-day forecast

--- a/index.html
+++ b/index.html
@@ -56,53 +56,8 @@
                             </div>
                         </section>
                         <section id='5-day-forecast'>
-                            <div class='row' id='predicted-conditions'>
-                                <div id='Day-1' class='card inline-block future' style='margin-left: 15px'>
-                                    <time class='small-date'>Tuesday, 06 April 2021</time>
-                                    <p>Description</p>
-                                    <p>Image Goes Here</p>
-                                    <p>Temperature</p>
-                                    <p>Humidity</p>
-                                    <p>Wind Speed</p>
-                                    <p>UV Index</p>
-                                </div>
-                                <div id='Day-2' class='card inline-block future'>
-                                    <time class='small-date'>Wednesday, 07 April 2021</time>
-                                    <p>Description</p>
-                                    <p>Image Goes Here</p>
-                                    <p>Temperature</p>
-                                    <p>Humidity</p>
-                                    <p>Wind Speed</p>
-                                    <p>UV Index</p>
-                                </div>
-                                <div id='Day-3' class='card inline-block future'>
-                                    <time class='small-date'>Thursday, 08 April 2021</time>
-                                    <p>Description</p>
-                                    <p>Image Goes Here</p>
-                                    <p>Temperature</p>
-                                    <p>Humidity</p>
-                                    <p>Wind Speed</p>
-                                    <p>UV Index</p>
-                                </div>
-                                <div id='Day-4' class='card inline-block future'>
-                                    <time class='small-date'>Friday, 09 April 2021</time>
-                                    <p>Description</p>
-                                    <p>Image Goes Here</p>
-                                    <p>Temperature</p>
-                                    <p>Humidity</p>
-                                    <p>Wind Speed</p>
-                                    <p>UV Index</p>
-                                </div>
-                                <div id='Day-5' class='card inline-block future'>
-                                    <time class='small-date'>Saturday, 10 April 2021</time>
-                                    <p>Description</p>
-                                    <p>Image Goes Here</p>
-                                    <p>Temperature</p>
-                                    <p>Humidity</p>
-                                    <p>Wind Speed</p>
-                                    <p>UV Index</p>
-                                </div>
-                            </div>
+                            <h5>5-Day Forecast</h5> 
+                            <div class='row' id='predicted-conditions'></div>
                         </section>
                 </main>
             </div>
